fix: footer alignment issue with overflowing links

--- a/ui-components/src/navigation/FooterNav.scss
+++ b/ui-components/src/navigation/FooterNav.scss
@@ -40,8 +40,12 @@
 
     @screen lg {
       @apply mt-0;
-      @apply w-6/12;
+      @apply w-full;
       @apply text-right;
+      display: flex;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      justify-content: end;
     }
   }
 }
